--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -47,7 +47,14 @@
     <div class="row">
       <div class="col-md-5">
         <div class="row">
-          <div class="col-md-12 item_contract_name" (click)="isQLMHD_08?openDetail(item.id):null">{{item.name}}</div>
+          <div class="col-md-12 item_contract_name">
+            <a  class="item_contract_name" style="text-decoration: none;" 
+            (click)="isQLMHD_08?openDetail(item.id):null" 
+            [routerLink]="['/main/contract-template/form/detail/', item.id]"
+            [queryParams]="{'page': this.p}">
+            {{item.name}}
+            </a>
+          </div>
         </div>
         <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
           <div class="col-md-12 item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}</div>
