--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -22,7 +22,10 @@
 
     <div class="col-md-6 btn_search">
       <button *ngIf="isQLND_03" class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
-      <button *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" (click)="addUser()">{{'btn.add' | translate }}</button>
+      <!-- <button *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" [routerLink]="['/main/form-user/add']" (click)="addUser()">{{'btn.add' | translate }}</button> -->
+        <a *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" [routerLink]="['/main/form-user/add']" (click)="addUser()">
+          {{'btn.add' | translate }}
+        </a>
     </div>
   </div>
 
@@ -53,7 +56,7 @@
       </ng-template>
       <ng-template pTemplate="body" let-list>
           <tr>
-              <td><a (click)="isQLND_04?detailUser(list.id):null" style="color: #0160AE; cursor: pointer;">{{list.name}}</a></td>
+              <td><a (click)="isQLND_04?detailUser(list.id):null" [routerLink]="['/main/user-detail/', list.id]" style="color: #0160AE; cursor: pointer; text-decoration: none;">{{list.name}}</a></td>
               <td>{{list.email}}</td>
               <td>{{list.phone}}</td>
               <td>{{list.organization.name}}</td>
