cap nhat form thong tin chu ky

--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -55,15 +55,15 @@
         <div class="label-header">{{'sign.information' | translate}}</div>
         <div class="content-body">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="label-header">
                         {{'sign.file-image' | translate}}
                     </div>
-                    <div class="content-body">
+                    <div class="content-body" style="margin: 12px 0;">
                         <div [hidden]="imgSignPCSelect">
                             <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpeg" style="display: none;" />
                             <div class="select-contract container-img-file">
-                                <div class="upload-image-region d-flex flex-column container-img-file-1">
+                                <div class="upload-image-region d-flex flex-column container-img-file">
                                     <img src="assets/img/img-icon.svg" alt="#" width="20px">
                                     <div class="text-choose-file">{{'image.empty' | translate}}</div>
                                 </div>
@@ -73,11 +73,13 @@
                             <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelect" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
                         </div>
                     </div>
-
+                </div>
+                
+                <div class="col-md-3">
                     <div class="label-header">
                         {{'sign.file-image.mark' | translate}}
                     </div>
-                    <div class="content-body">
+                    <div class="content-body" style="margin: 12px 0;">
                         <div [hidden]="imgSignPCSelectMark">
                             <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpeg" style="display: none;" />
                             <div class="select-contract container-img-file">
@@ -93,7 +95,9 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                
+
+                <div class="col-md-3">
                     <div class="label-header">
                         <div class="row" style="padding: 0 10px;">
                             <div class="col-md-12">
@@ -121,7 +125,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="label-header">
                         <div class="row" style="padding: 0 10px;">
                             <div class="col-md-12">
