--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -71,11 +71,11 @@
 <div class="label-header">{{'sign.information' | translate}}</div>
 <div class="content-body">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
             <div class="label-header">
                 {{'sign.file-image' | translate}}
             </div>
-            <div class="content-body">
+            <div class="content-body" style="margin-top:12px;">
                 <div [hidden]="imgSignPCSelect">
                     <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpge" (change)="fileChangedAttach($event,'sign')" style="display: none;" />
                     <div class="select-contract container-img-file" (click)="addFileAttach('sign')">
@@ -87,15 +87,17 @@
                     </div>
                 </div>
                 <div class="image-div">
-                    <img *ngIf="imgSignPCSelect" [src]="imgSignPCSelect" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%;">
+                    <img class="img" *ngIf="imgSignPCSelect" [src]="imgSignPCSelect" alt="" style="display: block;margin: 10px auto;max-height: 30vh;max-width: 100%">
                     <img class="hidden_img" (click)="addFileAttach('sign')" src="assets/img/img-icon.svg" width="15" height="15" />
                 </div>
             </div>
+        </div>
 
-            <div class="label-header" style="margin-top: 10px">
+        <div class="col-md-3">
+            <div class="label-header">
                 {{'sign.file-image.mark' | translate}}
             </div>
-            <div class="content-body">
+            <div class="content-body" style="margin-top:12px">
                 <div [hidden]="imgSignPCSelectMark">
                     <input id="attachFileMark" type="file" accept=".jpg, .png, .jpeg" (change)="fileChangedAttach($event,'mark')" style="display: none;" />
                     <div class="select-contract container-img-file" (click)="addFileAttach('mark')">
@@ -113,7 +115,7 @@
             </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
             <form [formGroup]="addKpiForm">
                 <div class="label-header">
                     <div class="row" style="padding: 0 10px;">
@@ -146,7 +148,7 @@
             </form>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
             <form [formGroup]="addHsmForm">
                 <div class="label-header">
                     <div class="row" style="padding: 0 10px;">
