--- a/src/app/main/user/infor-user/infor-user.component.scss
+++ b/src/app/main/user/infor-user/infor-user.component.scss
@@ -106,7 +106,7 @@ hr{
   border: 1px solid #87CAFF;
 }
 .container-img-file {
-  height: 15vh;
+  height: 30vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -121,6 +121,7 @@ hr{
 }
 
 .container-img-file-1 {
+  height: 33vh;
   justify-content: center;
   align-items: center;
 }
@@ -158,6 +159,14 @@ hr{
   position: relative;
   margin:5px;
 }
+
+.square {
+  width: 100%;
+  height: 0;
+  padding-bottom: 50%;
+  position: relative;
+}
+
 .image-div:hover .hidden_img {
   display: block;
 }
