fix bug ng trong luong xly & tai nhieu hop dong

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -227,7 +227,7 @@
                                 <div class="div_icon">
                                     <div class="col-md-1 calendar_create">
                                         <div>
-                                            <input name="item" type="checkbox"  (click)="toggleOneDownload(item)"/>
+                                            <input name="item" type="checkbox" [(ngModel)]="item.checked" (click)="toggleOneDownload(item)"/>
                                         </div>
                                     </div>
                                 </div>
