--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -34,6 +34,11 @@
                 <button class="btn_submit" (click)="cancelDownloadMany()">{{'cancel'| translate}}</button>
             </div>
         </div>
+        <div *ngIf="filter_status == -1">
+            <div class="col-md-1 btn_search" style="padding-top: 10px;">
+                <button (click)="downloadManyContract()" class="btn btn-lg btn-block btn_submit">{{'contract.down'| translate}}</button>
+            </div>
+        </div>
     </div>
 
     <div class="row list_header" *ngIf="pageTotal > 0;">
@@ -135,7 +140,7 @@
                                 <button type="button" class="btn btn-outline-dark btn_submit" (click)="openSecretaryContract(item)">{{'contract.document' | translate}}</button>
                             </div>
                             <div class="div_icon" *ngIf="item.contractStatus == 30">
-                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.contractId);" />
+                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download1' | translate}}" (click)="downloadContract(item.contractId);" />
                             </div>
                             <div class="div_icon" *ngIf="item.contractStatus == 32">
                                 <img src="../../assets/img/cancel_notes.svg" class="img_icon" ngbTooltip="{{ 'reasson.cancel.contract' | translate}}" (click)="ViewReasonCancel(item.contractId)" />
@@ -168,10 +173,21 @@
                         <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date: 'dd/MM/yyyy'}}</span></div>
                     </div>
 
-                    <div class="col-md-3 item_icon">
+                    <div class="col-md-2 item_icon">
                         <div style="display: flex; justify-content: center;">
                             <div class="div_icon">
-                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
+                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download2' | translate}}" (click)="downloadContract(item.id);" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-1 item_icon">
+                        <div style="display: flex; justify-content: center;">
+                            <div class="div_icon">
+                                <div class="col-md-1 calendar_create">
+                                    <div>
+                                        <input name="item" type="checkbox" [(ngModel)]="item.checked" (click)="toggleOneDownloadShare(item)"/>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -283,7 +299,7 @@
                             </div>
 
                             <div class="div_icon" *ngIf="this.typeDisplay == 'downloadMany'">
-                                <input id="all" name="all" type="checkbox" (click)="toggleOneDownload(item, index1)" />
+                                <input id="all" name="all" type="checkbox" [(ngModel)]="item.checked" (click)="toggleOneDownload(item, index1)" />
                             </div>
                         </div>
                     </div>
@@ -367,7 +383,7 @@
                             </div>
 
                             <div class="div_icon" *ngIf="item.contractStatus == 30">
-                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.contractId);" />
+                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download3' | translate}}" (click)="downloadContract(item.contractId);" />
                             </div>
                         </div>
                     </div>
@@ -400,7 +416,7 @@
                     <div class="col-md-3 item_icon">
                         <div style="display: flex; justify-content: center;">
                             <div class="div_icon">
-                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
+                                <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download4' | translate}}" (click)="downloadContract(item.id);" />
                             </div>
                         </div>
                     </div>
@@ -448,7 +464,7 @@
     <div *ngIf="this.typeDisplay === 'signOne'|| this.typeDisplay === 'downloadMany'" class="contract_footer">
         <div class="footer_title"></div>
         <div class="footer_pagination">
-            <pagination-controls *ngIf="pageTotal > 0" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+            <pagination-controls *ngIf="pageTotal > 0" (pageChange)="p=$event; getPageData()" previousLabel="" nextLabel=""></pagination-controls>
         </div>
         <div class="footer_page_number">{{'chart.number' | translate}}: {{pageStart}} - {{pageEnd}} / {{pageTotal}}</div>
     </div>
