--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -22,7 +22,6 @@
 
     <div class="col-md-6 btn_search">
       <button *ngIf="isQLND_03" class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
-      <!-- <button *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" [routerLink]="['/main/form-user/add']" (click)="addUser()">{{'btn.add' | translate }}</button> -->
         <a *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" [routerLink]="['/main/form-user/add']" (click)="addUser()">
           {{'btn.add' | translate }}
         </a>
@@ -66,7 +65,7 @@
 
               <td>{{list.role?.name}}</td>
               <td style="text-align: center">
-                <img *ngIf="isQLND_02" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
+                <img *ngIf="isQLND_02 && isQLND_04" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
               </td>
           </tr>
       </ng-template>
