--- a/src/app/main/sidebar/sidebar.component.html
+++ b/src/app/main/sidebar/sidebar.component.html
@@ -18,22 +18,24 @@
               <span *ngIf="menu.badge" class="badge badge-pill" [ngClass]="menu.badge.class">{{menu.badge.text}}</span>
             </a>
             <!-- Menu click link -->
-            <a *ngIf="menu.href !== '#' && menu.type != 'button'" [routerLink]="menu.href" >
+            <a *ngIf="menu.href !== '#' && menu.type != 'button'" (click)='clickLink(menu)' [routerLink]="menu.href" >
               <img src="{{menu.icon}}" />
               <span style="margin-left: 8px;">{{menu.title | translate}}</span>
               <span *ngIf="menu.badge" class="badge badge-pill" [ngClass]="menu.badge.class">{{menu.badge.text}}</span>
             </a>
             <span *ngIf="menu.type === 'button'" (click)="clickLink(menu)" class="sub_title_add">
-              <a class="btn_add_contract" style="color: white" [routerLink]="menu.href">
+              <a style="color: white" [routerLink]="menu.href">
+              <button class="btn_add_contract">
                 <span class="fa fa-plus icon_add"></span>{{menu.title | translate}}
-              </a>
+              </button>
+            </a>
             </span>
             <!-- Sub menu -->
             <div *ngIf="menu.type === 'dropdown'" class="sidebar-submenu" [@slide]="getState(menu)">
               <ul>
                 <li *ngFor="let submenu of menu.submenus" [ngClass]="{'active':submenu.active}">
 
-                  <a (click)="clickLinkSub(menu, submenu, 'contract-signature')" [routerLink]="submenu.href" >
+                  <a (click)="clickLinkSub(menu, submenu, 'contract-signature')" [routerLink]="submenu.href">
                     <span class="sub_title">{{submenu.title | translate}}</span>
                     <span *ngIf="submenu.badge" class="badge badge-pill" [ngClass]="submenu.badge.class">{{submenu.badge.text}}</span>
                   </a>
