dev giao dien danh muc khach hang - them moi to chuc

--- a/src/app/main/customer/customer-organization-add/customer-organization-add.component.html
+++ b/src/app/main/customer/customer-organization-add/customer-organization-add.component.html
@@ -1,1 +1,21 @@
-<p>customer-organization-add works!</p>
+<div class="container-fluid">
+    <div class="contract-determine">
+        <div class="contract--content">
+            <div class="contract__content--title-doi-tac">
+                <div style="width: 100px">
+                    {{ "organization.partner.name" | translate | uppercase }}&nbsp;
+                    <span style="color: red">*</span>
+                </div>
+                <input class="input1" type="text" />
+            </div>
+
+            <div class="contract__content--title-mst">
+                <div style="width: 100px">
+                    {{ "tax.code" | translate | uppercase }}&nbsp;
+                    <span style="color: red">*</span>
+                </div>
+                <input class="input1" type="text" />
+            </div>
+        </div>
+    </div>
+</div>
