--- a/src/app/main/customer/customer-organization-add/customer-organization-add.component.html
+++ b/src/app/main/customer/customer-organization-add/customer-organization-add.component.html
@@ -16,6 +16,36 @@
                 </div>
                 <input class="input1" type="text" />
             </div>
+
+            <div class="contract__content--participants">
+                <div class="participants-border">
+                    <div class="label">{{'user.view' | translate}}</div>
+                    <div class="participants--content">
+                        <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+                            <div class="participants--input" style="display: flex">
+                                <div class="participants__name">
+                                    <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span
+                                        class="required-title">*</span></div>
+                                    <div class="input-data">
+                                      <img src="assets/img/icon_name.svg" class="input-img">
+                                      <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}">
+                                    </div>
+                                </div>
+
+                                <div class="participants__name">
+                                    <div class="label_detail text-color">Email&nbsp;
+                                      <span class="required-title">*</span>
+                                    </div>
+                                    <div class="input-data">
+                                      <img src="assets/img/login_email.svg" class="input-img">
+                                      <input type="text" placeholder="{{'nhap_email' | translate}}">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
